# dekoza-django-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_name}}/docker/: docker-compose.prod.yml
{{cookiecutter.project_name}}/docker/django/: Dockerfile
