[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.project_verbose_name }}"
version = "0.1.0"
readme = "README.md"
authors = ["{{ cookiecutter.project_domain }}"]


[tool.poetry.dependencies]
python = "^3.8"

django = "^3.2.7"
django-split-settings = "^1.1.0"
django-axes = "^5.25.0"
django-csp = "^3.7"
django-health-check = "^3.16.4"
django-http-referrer-policy = "^1.1.1"
django-permissions-policy = "^4.2.0"
django-stubs-ext = "^0.3.1"

psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
python-decouple = "^3.4"
bcrypt = "^3.2.0"
structlog = "^21.1.0"


[tool.poetry.dev-dependencies]

django-debug-toolbar = "^3.2.2"
django-querycount = "^0.7.0"
django-migration-linter = "^3.0.1"
django-extra-checks = "^0.11.0"
django-coverage-plugin = "^2.0.0"
nplusone = "^1.0.0"

pytest = "^6.2.5"
pytest-django = "^4.4.0"
pytest-cov = "^2.12.1"
pytest-randomly = "^3.10.1"
pytest-testmon = "^1.2.0"

pytest-deadfixtures = "^2.2.1"
pytest-timeout = "^1.4.2"
hypothesis = "^6.21.6"

pre-commit = "^2.15.0"
black = "^21.9-beta.0"

mypy = "^0.910"
django-stubs = "^1.9.0"
Sphinx = "^4.2.0"
tomlkit = "^0.7.2"
doc8 = "^0.9.0"
yamllint = "^1.26.3"
safety = "^1.10.3"
ipython = "^7.27.0"
dotenv-linter = "^0.2.0"
sphinx-autodoc-typehints = "^1.12.0"
polint = "^0.4"
dennis = "^0.9"
dump-env = "^1.3.0"
